--- a/Romanian/main/Settings.apk/res/values-ro/strings.xml
+++ b/Romanian/main/Settings.apk/res/values-ro/strings.xml
@@ -1975,7 +1975,7 @@ Când activați crearea automată a copiei de rezervă, datele dispozitivului ș
     <string name="launch_defaults_none">Niciun lansator implicit setat</string>
     <string name="launch_defaults_some">Unele implicite setate</string>
     <string name="launcher_auto_fill_empty_title">Completarea celulelor goale</string>
-    <string name="launcher_title">Ecran principal</string>
+    <string name="launcher_title">Ecran principal și Recente</string>
     <string name="launching_cit">Lansare CIT</string>
     <string name="launching_pho">Lansare info telefon, aşteptaţi.</string>
     <string name="launching_rep">Raportare…</string>
@@ -2681,7 +2681,7 @@ Acest lucru va permite aplicației să comute modul Nu deranjați și să modifi
     <string name="open_personal_assistant_dialog_title">Dezactivați Asistentul inteligent</string>
     <string name="open_personal_assistant_title">Activați Asistentul inteligent</string>
     <string name="open_wifi_connect_summary">Atingeţi pentru a vizualiza detalii</string>
-    <string name="open_wifi_connect_title">Conectaţi-vă la %1$s</string>
+    <string name="open_wifi_connect_title">Conectat la %1$s</string>
     <string name="opening_paragraph_delete_profile_unknown_company">Acest profil de Servici este gestionat de către:</string>
     <string name="operator_warning">Contorizarea datelor mobile realizată de către operator poate diferi de cea din telefon</string>
     <string name="optimization_cancel">Renunțați</string>
@@ -2751,16 +2751,16 @@ Acest lucru va permite aplicației să comute modul Nu deranjați și să modifi
     <string name="page_layout_page2_title">Previzualizaţi</string>
     <string name="page_layout_small_title">Foarte mic</string>
     <string name="palm_enabled">Acoperiți ecranul pentru a o dezactiva</string>
-    <string name="paper_mode_auto_twilight_summary">comutare mod lectură în funcție de perioada din zi</string>
-    <string name="paper_mode_auto_twilight_title">Mod crepuscular</string>
-    <string name="paper_mode_customize_time_summary">comutare personalizată mod lectură</string>
-    <string name="paper_mode_customize_time_title">interval personalizate</string>
-    <string name="paper_mode_end_time_title">Oră sfârșit</string>
-    <string name="paper_mode_get_location_dlg_msg">Obținerea precisă a orelor de răsărit și apus necesită localizarea în funcție de rețea; accesați setările de localizare?</string>
+    <string name="paper_mode_auto_twilight_summary">Comută la modul Lectură la apus în mod automat</string>
+    <string name="paper_mode_auto_twilight_title">"Mod de citire seara"</string>
+    <string name="paper_mode_customize_time_summary">Comută la modul Lectură pentru o anumită perioadă</string>
+    <string name="paper_mode_customize_time_title">Interval personalizat</string>
+    <string name="paper_mode_end_time_title">Dezactivați</string>
+    <string name="paper_mode_get_location_dlg_msg">Pentru obținerea precisă a orelor de răsărit și apus este necesar accesul la locația dumneavoastră</string>
     <string name="paper_mode_get_location_dlg_negative_btn_text">Renunțați</string>
-    <string name="paper_mode_get_location_dlg_positive_btn_text">Setări</string>
-    <string name="paper_mode_get_location_dlg_title">Setare locație</string>
-    <string name="paper_mode_start_time_title">Oră de început</string>
+    <string name="paper_mode_get_location_dlg_positive_btn_text">Mergeți la Setări</string>
+    <string name="paper_mode_get_location_dlg_title">Setați locația</string>
+    <string name="paper_mode_start_time_title">Activați</string>
     <string name="passpoint_content">%1$s credențiale</string>
     <string name="passpoint_label">Salvat prin</string>
     <string name="passwordIncorrect">Parola introdusă este incorectă</string>
@@ -3090,6 +3090,7 @@ Acest lucru va permite aplicației să comute modul Nu deranjați și să modifi
     <string name="receiver_clean">Eliberați spațiu</string>
     <string name="recent_location_requests_summary">Vizualizaţi aplicaţiile care solicită accesul la informaţiile despre locația dvs.</string>
     <string name="recent_location_requests_title">Acces locaţie</string>
+    <string name="recents_config_title">Setări recente</string>
     <string name="recommend_item_1">Carcasă telefon</string>
     <string name="recommend_item_2">Brățară Mi</string>
     <string name="recommend_item_3">Acumulator extern</string>
@@ -3236,7 +3237,7 @@ Această setare afectează toţi utilizatorii acestui telefon."</string>
     <string name="screen_on_proximity_sensor_summary">Blocarea automată a telefonului atunci când este plasat în buzunar</string>
     <string name="screen_on_proximity_sensor_title">Prevenirea apelării în buzunar/poșetă</string>
     <string name="screen_optimize">Contrast</string>
-    <string name="screen_paper_mode_adjust_level">Intensitate</string>
+    <string name="screen_paper_mode_adjust_level">Ajustați</string>
     <string name="screen_paper_mode_apps_loading">Încărcare…</string>
     <string name="screen_paper_mode_apps_title">Utilizați Modul Lectură</string>
     <string name="screen_paper_mode_global_summary">Utilizați modul lectură pentru toate aplicaţiile</string>
@@ -3246,17 +3247,17 @@ Această setare afectează toţi utilizatorii acestui telefon."</string>
     <string name="screen_paper_mode_off_apps_title">Nu utilizați Modul Lectură</string>
     <string name="screen_paper_mode_range_title">Setări</string>
     <string name="screen_paper_mode_set_apps_title">Aplicaţiile modului lectură</string>
-    <string name="screen_paper_mode_summary">Se reduc reflexiile ecranului</string>
-    <string name="screen_paper_mode_time_summary">comutare mod lectură în funcție de intervalul setat</string>
-    <string name="screen_paper_mode_time_title">Program personalizat</string>
+    <string name="screen_paper_mode_summary">"Se reduc emisiile de lumină albastră ale ecranului"</string>
+    <string name="screen_paper_mode_time_summary">Setați ora de activare/dezactivare a modului Lectură</string>
+    <string name="screen_paper_mode_time_title">Program</string>
     <string name="screen_paper_mode_title">Mod lectură</string>
     <string name="screen_paper_mode_turn_off">Oprit</string>
     <string name="screen_paper_mode_turn_on">Pornit</string>
     <string name="screen_paper_mode_update_white_pkg_list_privacy_again">Nu se mai afişează</string>
     <string name="screen_paper_mode_update_white_pkg_list_privacy_agree">Permiteţi</string>
-    <string name="screen_paper_mode_update_white_pkg_list_privacy_summary">Pentru a actualiza lista aplicațiilor ce pot utiliza Modul Lectură, trebuie să vă conectați la internet.</string>
+    <string name="screen_paper_mode_update_white_pkg_list_privacy_summary">Pentru a actualiza lista aplicațiilor ce utilizează Modul Lectură, trebuie să vă conectați la internet.</string>
     <string name="screen_paper_mode_update_white_pkg_list_privacy_title">Conexiune internet</string>
-    <string name="screen_paper_mode_update_white_pkg_list_summary">Se actualizează lista aplicațiilor ce utilizează Modul Lectură în mod automat</string>
+    <string name="screen_paper_mode_update_white_pkg_list_summary">Actualizați lista aplicațiilor ce utilizează Modul Lectură în mod automat</string>
     <string name="screen_paper_mode_update_white_pkg_list_title">Actualizare automată</string>
     <string name="screen_pinning_description">"Când este activată, puteți utiliza fixarea ecranului pentru a menține ecranul actual până la anularea fixării.
 
@@ -3695,6 +3696,7 @@ Notă: Deblocarea cu amprentă poate fi mai puțin sigură decât utilizarea unu
     <string name="show_ime">Afișează tastatura virtuală</string>
     <string name="show_ime_summary">Păstrează pe ecran cât timp tastatura fizică este activă</string>
     <string name="show_magnifier_when_input">Afişaţi lupa</string>
+    <string name="show_mem_info_title">Arată starea memoriei</string>
     <string name="show_non_rect_clip">Remediați decupări nerectangulare</string>
     <string name="show_owner_info_on_lockscreen_label">Afişează informațiile despre proprietar în Blocarea ecranului</string>
     <string name="show_password">Faceţi parolele vizibile</string>
@@ -4506,6 +4508,7 @@ Atingeți butonul (+) pentru a adăuga cuvinte."</string>
     <string name="user_restrictions_controlled_by">Controlate de %1$s</string>
     <string name="user_restrictions_title">Restricții aplicații și conținut</string>
     <string name="user_set_lock_button">Configurați blocarea</string>
+    <string name="user_settings_forbidden">"Nu se pot modifica setările de administrator în Spațiul curent. Reveniți la Spațiul Principal."</string>
     <string name="user_settings_title">Utilizatori şi restricţii</string>
     <string name="user_setup_button_setup_later">Nu acum</string>
     <string name="user_setup_button_setup_now">Configuraţi acum</string>
