--- a/Romanian/main/MiuiScreenRecorder.apk/res/values-ro/strings.xml
+++ b/Romanian/main/MiuiScreenRecorder.apk/res/values-ro/strings.xml
@@ -40,7 +40,7 @@
     <string name="memory_not_allowed">Spațiu de stocare insuficient. Eliberați spațiu de stocare pentru a putea înregistra.</string>
     <string name="mic_sound">Microfon</string>
     <string name="no_recorder_info">Niciun videoclip aici</string>
-    <string name="no_recorder_info2">Apăsați butonul pentru a adăuga o înregistrare de ecran​</string>
+    <string name="no_recorder_info2">Apăsați butonul pentru a începe înregistrarea​</string>
     <string name="no_sound">Mut</string>
     <string name="operation_delete">Ștergeți</string>
     <string name="operation_send">Trimiteți</string>
