--- a/Romanian/main/Weather.apk/res/values-ro/strings.xml
+++ b/Romanian/main/Weather.apk/res/values-ro/strings.xml
@@ -46,11 +46,25 @@
     <string name="aqi_detail_sub_title">Detalii ICA</string>
     <string name="aqi_detail_subtitle">ICA %1$s</string>
     <string name="aqi_detail_title">Indicele de Calitate a Aerului</string>
-    <string name="aqi_detail_unit">Unitatea de măsură: µg/m³ (CO: mg/m³)</string>
-    <string name="aqi_display_exp">exp_%1$s</string>
+    <string name="aqi_detail_unit">Unitatea de măsură: µg/m³</string>
+    <string name="aqi_fifteen_dates_time_format">dd/MM</string>
     <string name="aqi_publish_source">Actualizat la %1$s de CNEMC</string>
     <string name="aqi_publish_time">Actualizat la %1$s</string>
+    <string name="aqi_quality_ambient_air_quality">Calitatea aerului înconjurător</string>
+    <string name="aqi_quality_co_desc">Monoxid de Carbon</string>
+    <string name="aqi_quality_detail_15_days">Prognoza pe 15 zile</string>
+    <string name="aqi_quality_detail_48_hours">Prognoza pe 48 de ore</string>
+    <string name="aqi_quality_major_pollutants">Poluanți majori</string>
+    <string name="aqi_quality_map_edit_text_hint">Căutați calitatea aerului</string>
+    <string name="aqi_quality_map_title">Harta calității aerului</string>
+    <string name="aqi_quality_no2_desc">Dioxid de azot</string>
+    <string name="aqi_quality_o3_desc">Ozon</string>
+    <string name="aqi_quality_pm10_desc">Particule grosiere inhalabile</string>
+    <string name="aqi_quality_pm25_desc">Particule fine</string>
+    <string name="aqi_quality_so2_desc">Dioxid de Sulf</string>
     <string name="aqi_short_desc">ICA %1$s</string>
+    <string name="aqi_station_best_quality_station">Cea mai bună din zonă</string>
+    <string name="aqi_station_min_distance_station">Cea mai apropiată stație</string>
     <string name="aqi_sub_desc">ICA</string>
     <string name="aqi_top_pollution">Grad maxim de poluare</string>
     <string name="button_abandon">Renunțați la modificări</string>
@@ -88,7 +102,7 @@ Glisați în jos pentru a actualiza sau verificați setările de rețea"</string
     <string name="feedback_heavy_snow">Ninsoare</string>
     <string name="feedback_light_rain">Ploaie ușoară</string>
     <string name="feedback_overcast">Înnorat</string>
-    <string name="feedback_result_fail_no_choice">Vă rugăm selectați tipul de vreme pe care îl resimțiți</string>
+    <string name="feedback_result_fail_no_choice">Selectați condițiile meteo curente</string>
     <string name="feedback_result_interval_time_too_short">%1$s secunde după feedback</string>
     <string name="feedback_result_success">Trimis cu succes. Vă mulțumim pentru feedback</string>
     <string name="feedback_sand">Furtună de nisip</string>
@@ -153,17 +167,17 @@ Apăsați pe ecran pentru a adăuga manual sau pentru a repoziționa orașul"</s
     <string name="menu_minute_rain">Prognoza de precipitații pentru două ore</string>
     <string name="menu_speeker">Suport vocal</string>
     <string name="mi_pad2">latte</string>
-    <string name="minute_rain_after_an_hour">Cu o oră mai târziu</string>
-    <string name="minute_rain_after_two_hour">Cu două ore mai târziu</string>
-    <string name="minute_rain_feedback_subtitle">Spune-mi doar ce vreme este</string>
+    <string name="minute_rain_after_an_hour">Într-o oră</string>
+    <string name="minute_rain_after_two_hour">În două ore</string>
+    <string name="minute_rain_feedback_subtitle">Spuneți-ne cum este vremea.</string>
     <string name="minute_rain_feedback_text">Feedback</string>
-    <string name="minute_rain_feedback_title">"Starea vremii nu pare a fi corectă.."</string>
-    <string name="minute_rain_let_go_refresh">Reîmprospătați</string>
+    <string name="minute_rain_feedback_title">Starea vremii nu pare a fi cea corectă.</string>
+    <string name="minute_rain_let_go_refresh">Eliberați pentru a reîmprospăta</string>
     <string name="minute_rain_no_data">Nicio dată</string>
     <string name="minute_rain_now">Acum</string>
     <string name="minute_rain_progress_indicator_original_time">- -</string>
     <string name="minute_rain_pull_down_refresh">Glisați în jos pentru a reîmprospăta</string>
-    <string name="minute_rain_refreshing_now">Reîmprospătare</string>
+    <string name="minute_rain_refreshing_now">Reîmprospătare…</string>
     <string name="more_details">Mai multe detalii</string>
     <string name="network_not_available">"Nu se poate conecta la rețea"</string>
     <string name="network_unavailable">"Nu se poate conecta la rețea."</string>
@@ -174,11 +188,14 @@ Apăsați pe ecran pentru a adăuga manual sau pentru a repoziționa orașul"</s
     <string name="open_browser">Deschideți în browser</string>
     <string name="open_now">Deschideți</string>
     <string name="other">Altele</string>
-    <string name="precipitation_degree_five">furtună</string>
-    <string name="precipitation_degree_four">torențială</string>
-    <string name="precipitation_degree_one">nu plouă</string>
-    <string name="precipitation_degree_three">moderată</string>
-    <string name="precipitation_degree_two">ușoară</string>
+    <string name="particulate_matter_exceeded">Înalt</string>
+    <string name="particulate_matter_not_exceeded">Normal</string>
+    <string name="particulate_matter_serious_exceeded">Prea înalt</string>
+    <string name="precipitation_degree_five">Torențială</string>
+    <string name="precipitation_degree_four">Puternică</string>
+    <string name="precipitation_degree_one">Niciuna</string>
+    <string name="precipitation_degree_three">Moderată</string>
+    <string name="precipitation_degree_two">Ușoară</string>
     <string name="pressure_connect">%1$s mb</string>
     <string name="radar_cloud_image_title">Hartă radar</string>
     <string name="realtime_aqi_title">Indice de Calitate a Aerului</string>
@@ -205,7 +222,7 @@ Apăsați pe ecran pentru a adăuga manual sau pentru a repoziționa orașul"</s
     <string name="share_weather_desc_alert">%1$s%2$s</string>
     <string name="share_weather_desc_split">,</string>
     <string name="share_weather_save_pic_fail">"Nu s-a putut efectua captura de ecran"</string>
-    <string name="some_where_on_earth">Undeva pe Pământ</string>
+    <string name="some_where_on_earth">Un loc pe Pământ</string>
     <string name="sunrise">Răsărit</string>
     <string name="sunset">Apus</string>
     <string name="temperature_unit">%1$s°C</string>
