--- a/Romanian/main/framework-ext-res.apk/res/values-ro/strings.xml
+++ b/Romanian/main/framework-ext-res.apk/res/values-ro/strings.xml
@@ -71,7 +71,7 @@
     <string name="lockscreen_access_pattern_start">Model început</string>
     <string name="maml_component_customization_title">Setări</string>
     <string name="memory_clear_nothing_result">Nimic de curăţat în memoria cache</string>
-    <string name="memory_clear_result">%1$sB goliţi | %2$sB disponibili</string>
+    <string name="memory_clear_result">%1$sB goliţi</string>
     <string name="miui">MIUI</string>
     <string name="miui_upgrading_notification_title">Se încarcă sistemul, unele caracteristici pot fi limitate</string>
     <string name="package_delete_confirm_step_1">Ștergeți %s?</string>
